--- a/templates/entreprise/new.html.twig
+++ b/templates/entreprise/new.html.twig
@@ -3,6 +3,29 @@
 {% block title %}Add a company{% endblock %}
 
 {% block body %}
-    <h1>Add a company</h1>
-    {{ form(formAddEntreprise) }}
+    {% if edit %}
+        <h1>Edit a company</h1>           
+    {% else %}
+        <h1>Add a company</h1>
+    {% endif %}
+
+
+    {{ form_start(formAddEntreprise) }}
+
+        {{ form_row(formAddEntreprise.raisonSociale) }}            
+        {{ form_row(formAddEntreprise.dateCreation) }}            
+        <div class="row">
+            <div class="col-sm">
+                {{ form_row(formAddEntreprise.adresse) }}
+            </div>
+            <div class="col-sm">
+                {{ form_row(formAddEntreprise.cp) }}
+            </div>
+            <div class="col-sm">
+                {{ form_row(formAddEntreprise.ville) }}
+            </div>
+        </div>
+        {{ form_row(formAddEntreprise.validate) }}
+    {{ form_end(formAddEntreprise) }}
+
 {% endblock %}
